--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -3,31 +3,12 @@
 
 <div class="row">
     <div class="col">
-        <h3>Personajes</h3>
-        <hr>
-        <ul>
-            <li *ngFor="let personaje of personajes">{{ personaje.nombre }} - {{ personaje.poder | number}}</li>
-        </ul>
+        <app-personajes></app-personajes>
     </div>
-
     <div class="col">
-        <h3>Agregar</h3>
-        <hr>
-        <form (ngSubmit)="agregar($event)">
-            <input
-                type="text"
-                placeholder="Nombre"
-                name="nombre"
-                [(ngModel)]="nuevo.nombre"
-            />
-            <input
-                type="number" placeholder="Poder"
-                [value]="nuevo.poder"
-                name="poder"
-                [(ngModel)]="nuevo.poder"
-            />
-            <button type="submit">Agregar</button>
-        </form>
+        <app-agregar
+            [nuevo]="nuevo"
+        ></app-agregar>
     </div>
 </div>
 
